Fixed issue with spacing after the last-child
The full-width text molecule always lives within a block, which has 60px of bottom spacing. The addition of bottom spacing to the last paragraph of the full-width text molecule was being stacked with the block’s 60px increasing the space more than spec’d. Removing the bottom margin from the paragraphs when they are a last-child fixes the issue.

--- a/cfgov/unprocessed/css/enhancements/typography.less
+++ b/cfgov/unprocessed/css/enhancements/typography.less
@@ -383,6 +383,7 @@ dd {
     - cf-core
 */
 
+p:last-child,
 ul:last-child,
 .list__links .list_item:last-child {
     margin-bottom: 0;
